# betterproto-example

./: .gitignore  BUILD  MODULE.bazel  betterproto.bzl  gazelle_python.yaml  requirements.txt  requirements_lock.txt
betterproto/: BUILD.bazel  defs.bzl
example/: BUILD.bazel  __main__.py
example/proto/: BUILD.bazel  service.proto
example/proto/example/: BUILD.bazel  example.py
