load("@rules_proto_grpc//:defs.bzl", "proto_plugin")
load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")

py_console_script_binary(
    name = "betterproto",
    pkg = "@pip//betterproto",
    script = "protoc-gen-python_betterproto",
)

proto_plugin(
    name = "python_betterproto",
    options = ["pydantic_dataclasses"],
    output_directory = True,
    tool = "betterproto",
    visibility = ["//visibility:public"],
)
